Update README, remove executables

--- a/README
+++ b/README
@@ -5,7 +5,7 @@ $ module swap PrgEnv-intel PrgEnv-gnu
 $ export PATH=$PATH:/global/homes/c/cmhuang/packages/include/
 $ export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/global/homes/c/cmhuang/packages/lib64/
 $ export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/intel/compilers_and_libraries_2020.2.254/linux/mkl/lib/intel64/
-$ g++ -o hw5 src/*.cpp -I/global/homes/c/cmhuang/packages/include/ -L/opt/intel/compilers_and_libraries_2020.2.254/linux/mkl/lib/intel64/ -L/global/homes/c/cmhuang/packages/lib64 -Iinclude -larmadillo -llapack -lblas -fopenmp
+$ g++ -o final src/*.cpp -I/global/homes/c/cmhuang/packages/include/ -L/opt/intel/compilers_and_libraries_2020.2.254/linux/mkl/lib/intel64/ -L/global/homes/c/cmhuang/packages/lib64 -Iinclude -larmadillo -llapack -lblas -fopenmp
 
 To run:
 
@@ -20,4 +20,4 @@ $ export OMP_PLACES=cores
 $ export OMP_PROC_BIND=spread
 
 #run the application:
-$ srun -n 1 -c 68 --cpu_bind=cores ./hw5 ./input/HF+.txt
+$ srun -n 1 -c 68 --cpu_bind=cores ./final ./input/HF+.txt
